# dumbo-template-engine

./: .gitignore  LICENSE  README.md  dumbo.lark  dumbo.py  grammar.py  requirements.txt  setup.cfg
dumbo/: __init__.py  dumbo.lark  dumbo.py  dumbo_engine.py  dumbo_transformers.py  intermediate_code.py  intermediate_code_interpreter.py  main.py  variable.py
dumbo_core/: dumbo.lark  dumbo_transformers.py  intermediate_code_interpreter.py  symbol_table.py  variable.py
tests/: examples_test.py  premier_test_Transformer.py  premier_test_for_loop.py  premier_test_if.py  test_dumbo.py
tests/examples/: assignment_expr_test.dumbo
