[metadata]
name = dumbo-template-engine
version = 1.0.0
description = A template engine for generating text files using the Dumbo language
author = Romeo Ibraimovski and Nathan Amorison
author_email = romeo.ibraimovski@gmail.com and nathan.amorison@gmail.com
url = https://github.com/RomeoXXIV/dumbo-template-engine

[options]
packages = find:
install_requires = lark-parser

[options.packages.find]
exclude = test*
